<resources>
    <string name="app_name">BahanbaKu</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="create_an_account_instead">Create an account instead?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="placeholder_cook_level">Cook Level</string>
    <string name="placeholder_level_description">This is the description of the level</string>
    <string name="featured_this_week">Featured this week!</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="placeholder_average_price">avg. of Rp35.000</string>
    <string name="placeholder_recipe_description">This is the description of the recipe. The recipe description will be put here for users to see and the recipe will contain ingredients below this</string>
    <string name="placeholder_author">by Author Name</string>
    <string name="discover_new_recipes">Discover new recipes</string>
    <string name="categories">Categories</string>
    <string name="placeholder_recipe_name">Pancake with Chocolate and Mozzarella Toppings</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="check_ingredients">Check Ingredients</string>
    <string name="placeholder_servings">4 servings</string>
    <string name="placeholder_ingredient">Ingredient name 100g</string>
    <string name="get_ingredients">Get Ingredients</string>
    <string name="placeholder_store_name">Store Name</string>
    <string name="placeholder_price">Rp20.000</string>
    <string name="go_to_app">Go to App</string>
    <string name="placeholder_is_it_food">Is it Food Name?</string>
    <string name="turn_snap_into_reality">Turn snap into reality!</string>
    <string name="snapfood_description_before">Here are the top 3 foods that match the best according to us</string>
    <string name="snap_a_food">Snap a Food</string>
    <string name="placeholder_food_name">Food Name</string>
    <string name="placeholder_description_food">This is the description of the food that is taken by the camera of the SnapFood feature.</string>
    <string name="snap_again">Snap Again</string>
    <string name="recipes_found">Here’s some recipes we found for this food!</string>
    <string name="search_for_recipes">Search for recipes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="bookmark">Bookmark</string>
    <string name="snapfood">SnapFood</string>
    <string name="register_success">Account registered successfully</string>
    <string name="click_here">Click here!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="text_forgot_password_page">forgot your password? Don\'t worry, help us to fill in your email and we will send you a new password right away.</string>
    <string name="create_new_password">Create New Password</string>
    <string name="profile">Profile</string>
    <string name="name_profile">marianita</string>
    <string name="email_profile">marianita12@gmail.com</string>
    <string name="account_information">Account Information</string>
    <string name="stored">Stored</string>
    <string name="title_recipe">Chicken Rice Box</string>
    <string name="title_recipe_detail">Chicken Rice Box</string>
    <string name="recipe">Recipe</string>
    <string name="detail_recipe">detail recipe needed</string>
    <string name="step">Step</string>
    <string name="detail_step">Detail step</string>
    <string name="placeholder_rating">4.5</string>
    <string name="text_body_camera">Take a photo of the food and we\'ll find the recipe and ingredients at the best price for you!</string>
    <string name="Take_foto">Take a Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="switch_camera">Switch Camera</string>
    <string name="capture_image">Capture Image</string>
    <string name="failed_open_camera">Failed to open camera</string>
    <string name="dash">-</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="name_title">Name</string>
    <string name="notification_password">Last replaced 2 weeks ago</string>
    <string name="error_loading_profile">Error loading profile</string>
    <string name="carry_on">Continue</string>
    <string name="search_hint">Looking For Who?</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="total_price">Total Price</string>

    <string name="probability">Accuracy: %d\%%</string>
    <string name="serving">%d servings</string>
    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="food_map">Food Map</string>
    <string name="title_activity_update_location">UpdateLocationActivity</string>
    <string name="nearby_rating">%f - Rated by %d users</string>
    <string name="update_location">Update Location</string>
    <string name="logout">Log out</string>
    <string name="gallery">Gallery</string>
    <string name="or">Or</string>
    <string name="import_picture">Import a picture</string>
    <string name="value">Value</string>
    <string name="edit_profile_information">Edit Profile Information</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="proceed">Proceed</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_update_success">Account updated successfully</string>
    <string name="profile_picture_update_failed">Profile picture update failed</string>
    <string name="profile_picture_updated">Profile picture updated</string>
    <string name="get_loc_failed">Get location failed</string>
    <string name="youre_here">You\'re here!</string>
    <string name="location_updated_success">Location updated successfully</string>
    <string name="order">Order</string>
    <string name="text_our_service_uses_location">Our service uses location to get the best ingredients prices for you :)</string>
    <string name="update_your_location">Update your location!</string>
    <string name="title_introduction">Welcome to Bahan Baku!</string>
    <string name="introduction">In this application you can find recipes and ingredients foods that are suitable for business with best price from many stores.</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="title_introduction_menu_food">introduce the food recognition menu</string>
    <string name="introduction_menu_food">food recognition is a feature of the raw material application that allows users to take photos of food for food name detection</string>
    <string name="title_introduction_ingredients">cheapest ingredients!</string>
    <string name="introduction_menu_ingredients">this app can find the cheapest ingredients around you.</string>
    <string name="title_introduction_brand">Bahan Baku</string>
    <string name="introduction_menu_brand">let\'s join together in our application.</string>
    <string name="distance_under_50_km_from_suppliers">Distance under 50 km from suppliers</string>
    <string name="distance_above_50_km_from_suppliers">Distance above 50 km from suppliers</string>
    <string name="select_ingredients_to_order">Select ingredients to order</string>
    <string name="compressing_image">Compressing image</string>
    <string name="our_machine_is_detecting_the_food">Our machine is detecting the food</string>
    <string name="click_to_see_the_recipes">Click to see the recipes</string>
    <string name="wrong_credentials">Wrong credentials</string>
    <string name="login_failed">Login failed</string>
    <string name="did_you_know_various_bakso">Did you know that there are various of bakso?</string>
    <string name="did_you_know_bakso_desc">Bakso is a comfort food for a lot of people. But little did we know, there are more bakso than we thought.Wanna know?</string>
    <string name="click_to_see_what_we_mean">Click to see what we mean</string>
    <string name="our_local_cuisine_highlight">Our Local Cuisine Highlight</string>
    <string name="opening_camera">Opening camera</string>
    <string name="opening_gallery">Opening gallery</string>
</resources>