<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="14dp"
    android:layout_marginEnd="2dp"
    android:layout_marginVertical="2dp"
    app:cardCornerRadius="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_margin="9dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_recipe"
                android:layout_width="145dp"
                android:layout_height="145dp"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/recipe_name"
            app:layout_constraintStart_toEndOf="@+id/card_img"
            app:layout_constraintTop_toTopOf="@+id/card_img" />

        <TextView
            android:id="@+id/tv_average_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/placeholder_average_price"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/tv_recipe_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name"
            tools:fontFamily="sans-serif-medium" />

        <TextView
            android:id="@+id/tv_recipe_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/placeholder_recipe_description"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_average_price"
            app:layout_constraintTop_toBottomOf="@id/tv_average_price" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/placeholder_author"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/card_img"
            app:layout_constraintStart_toStartOf="@id/tv_recipe_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>