<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_landing_page_scene"
    tools:context=".ui.landing.LandingPageActivity">

    <ImageView
        android:id="@+id/img_container2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-36dp"
        android:src="@drawable/dr_page_container_down_2"
        app:layout_constraintBottom_toBottomOf="@id/img_illustration1"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="82dp"
        android:layout_marginTop="60dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_logo_bahanbaku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_illustration1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_thingking_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />


    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu1"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginStart="32sp"
        android:layout_marginTop="16dp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toTopOf="@id/tv_title_1"
        app:layout_constraintEnd_toStartOf="@+id/menu2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_container2"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/primary" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu2"
        android:layout_width="30sp"
        android:layout_height="30sp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu1"
        app:layout_constraintEnd_toStartOf="@+id/menu3"

        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toTopOf="@+id/menu1"

        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/primary" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu3"
        android:layout_width="30sp"
        android:layout_height="30sp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu2"
        app:layout_constraintEnd_toStartOf="@+id/menu4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toTopOf="@+id/menu2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/primary" />

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/menu4"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginEnd="32sp"
        app:altSrc="@drawable/ic_circle_full_24"
        app:layout_constraintBottom_toBottomOf="@+id/menu3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toTopOf="@+id/menu3"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_circle_24"
        app:tint="@color/primary" />


    <TextView
        android:id="@+id/tv_title_1"
        style="@style/Text.Title.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="-16dp"
        android:text="@string/title_introduction"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/tv_desc_1"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_1"
        app:layout_constraintStart_toStartOf="@id/tv_desc_1"
        app:layout_constraintTop_toBottomOf="@id/menu1" />

    <TextView
        android:id="@+id/tv_desc_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="32dp"
        android:text="@string/introduction"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_1" />

    <TextView
        android:id="@+id/tv_title_2"
        style="@style/Text.Title.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="-16dp"
        android:text="@string/title_introduction_menu_food"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_2"
        app:layout_constraintStart_toStartOf="@id/tv_desc_2"
        app:layout_constraintTop_toBottomOf="@id/menu1" />

    <TextView
        android:id="@+id/tv_desc_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="32dp"
        android:text="@string/introduction_menu_food"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/skip"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_2" />

    <TextView
        android:id="@+id/tv_title_3"
        style="@style/Text.Title.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="-16dp"
        android:text="@string/title_introduction_ingredients"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_3"
        app:layout_constraintStart_toStartOf="@id/tv_desc_3"
        app:layout_constraintTop_toBottomOf="@id/menu1" />

    <TextView
        android:id="@+id/tv_desc_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginBottom="32dp"
        android:text="@string/introduction_menu_ingredients"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/skip"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_3" />

    <TextView
        android:id="@+id/tv_title_4"
        style="@style/Text.Title.Large"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="-16dp"
        android:text="@string/title_introduction_brand"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/tv_desc_4"
        app:layout_constraintStart_toStartOf="@id/tv_desc_4"
        app:layout_constraintTop_toBottomOf="@id/menu1" />

    <TextView
        android:id="@+id/tv_desc_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32sp"
        android:layout_marginEnd="32sp"
        android:layout_marginBottom="32dp"
        android:text="@string/introduction_menu_brand"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/skip"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_4" />

    <Button
        android:id="@+id/skip"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/skip"
        android:textColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_start"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_start"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary"
        android:text="@string/start"
        android:textColor="@color/secondary"
        app:layout_constraintBottom_toBottomOf="@id/skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/skip"
        app:layout_constraintTop_toTopOf="@id/skip" />


</androidx.constraintlayout.motion.widget.MotionLayout>